# DataStructure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ocarray.c  ocarray.h  ocdatautils.c  ocdatautils.h  ocdisorder.c  ocdisorder.h  ocdlist.c  ocdlist.h  ocmacro.h  ocslist.c  ocslist.h  ocstack.c  ocstack.h
test/: test_array.c  test_disorder.c  test_dlist.c  test_slist.c  test_stack.c
